--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "vendor.d.ts"
+    "tests/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
